--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">MataMoscas 300</string>
+    <string name="app_name">Mata-Moscas 3000</string>
 </resources>
